infra/k8s/ingresses/ingress-service.yaml
# apiVersion: networking.k8s.io/v1
# # apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#     - host: "posts.com"
#       http:
#         paths:
#           - path: /posts
#             pathType: Prefix
#             backend:
#               service:
#                 name: posts-service
#                 port:
#                   number: 4000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ibrahimalshmrani.online
    secretName: wow-nice-to.sha
  rules:
    - host: ibrahimalshmrani.online
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 4000
          - path: /post/create
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 4002
          - path: /post/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 4001
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-bus-service
                port:
                  number: 4005
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
